fix: [CCM-5160]: continue button visibility in case of error (#5929)

--- a/src/modules/35-connectors/components/CreateConnector/CEK8sConnector/CEK8sConnector.module.scss
+++ b/src/modules/35-connectors/components/CreateConnector/CEK8sConnector/CEK8sConnector.module.scss
@@ -5,12 +5,20 @@
 }
 
 .overviewStep {
+  position: relative;
+  height: 100%;
   .infoSection {
     padding: 15px 20px;
     background: #effbff;
     color: var(--grey-800);
     line-height: 24px;
     max-width: 800px;
+  }
+  .formCont {
+    height: 100%;
+    > div {
+      height: 100%;
+    }
   }
   .selectConnector {
     width: 54%;
